--- a/crypto/sol-to-usd/index.html
+++ b/crypto/sol-to-usd/index.html
@@ -102,9 +102,9 @@
                 <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
                 <div class="internal-links-cluster" style="margin-bottom: 32px;">
                     <p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
 <p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
-<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
-<p><a href="/currency/gbp-to-aud" style="color: var(--primary-color); text-decoration: underline;">GBP to AUD Rate</a></p>
+<p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
                     <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
                             Crypto Converter Hub</a></p>
                 </div>
