--- a/currency/aud-to-eur/index.html
+++ b/currency/aud-to-eur/index.html
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/gbp-to-usd" style="color: var(--primary-color); text-decoration: underline;">GBP to USD Rate</a></p>
-<p><a href="/currency/dkk-to-usd" style="color: var(--primary-color); text-decoration: underline;">DKK to USD Rate</a></p>
-<p><a href="/currency/usd-to-nok" style="color: var(--primary-color); text-decoration: underline;">USD to NOK Rate</a></p>
-<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
+                <p><a href="/currency/usd-to-sek" style="color: var(--primary-color); text-decoration: underline;">USD to SEK Rate</a></p>
+<p><a href="/currency/cad-to-usd" style="color: var(--primary-color); text-decoration: underline;">CAD to USD Rate</a></p>
+<p><a href="/currency/usd-to-dkk" style="color: var(--primary-color); text-decoration: underline;">USD to DKK Rate</a></p>
+<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
