--- a/currency/usd-to-zar/index.html
+++ b/currency/usd-to-zar/index.html
@@ -149,10 +149,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/usd-to-cny" style="color: var(--primary-color); text-decoration: underline;">USD to CNY Rate</a></p>
-<p><a href="/currency/usd-to-inr" style="color: var(--primary-color); text-decoration: underline;">USD to INR Rate</a></p>
-<p><a href="/currency/usd-to-sek" style="color: var(--primary-color); text-decoration: underline;">USD to SEK Rate</a></p>
-<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
+                <p><a href="/currency/sek-to-usd" style="color: var(--primary-color); text-decoration: underline;">SEK to USD Rate</a></p>
+<p><a href="/currency/gbp-to-eur" style="color: var(--primary-color); text-decoration: underline;">GBP to EUR Rate</a></p>
+<p><a href="/currency/zar-to-usd" style="color: var(--primary-color); text-decoration: underline;">ZAR to USD Rate</a></p>
+<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
