--- a/time-code/convert-cest-to-local-time/index.html
+++ b/time-code/convert-cest-to-local-time/index.html
@@ -104,9 +104,9 @@
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Time Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
                 <p><a href="/time-code/convert-gmt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Greenwich Mean Time to Local</a></p>
-<p><a href="/time-code/convert-bst-to-local-time" style="color: var(--primary-color); text-decoration: underline;">British Summer Time to Local</a></p>
 <p><a href="/time-code/convert-edt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Eastern Daylight Time to Local</a></p>
-<p><a href="/time-zone/sgt-to-pst" style="color: var(--primary-color); text-decoration: underline;">Singapore Time (SGT) to Pacific Time (PT)</a></p>
+<p><a href="/time-code/convert-cest-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Central European Summer Time to Local</a></p>
+<p><a href="/time-zone/cet-to-jst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Japan Standard Time (JST)</a></p>
                 <p><a href="/time-code" style="color: var(--primary-color); text-decoration: underline;">Back to
                         Time-code Translator Hub</a></p>
             </div>
