--- a/time-zone/sgt-to-pst/index.html
+++ b/time-zone/sgt-to-pst/index.html
@@ -121,9 +121,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
-                <p><a href="/time-zone/gmt-to-ist" style="color: var(--primary-color); text-decoration: underline;">London (GMT/BST) to India Standard Time (IST)</a></p>
-<p><a href="/time-zone/mt-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Mountain Time (MT) to London (GMT/BST)</a></p>
-<p><a href="/time-zone/cet-to-pst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Pacific Time (PT)</a></p>
+                <p><a href="/time-zone/cet-to-jst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Japan Standard Time (JST)</a></p>
+<p><a href="/time-zone/cst-to-est" style="color: var(--primary-color); text-decoration: underline;">China Standard Time (CST) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/gmt-to-est" style="color: var(--primary-color); text-decoration: underline;">London (GMT/BST) to Eastern Time (ET)</a></p>
 <p><a href="/time-code/convert-gmt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Greenwich Mean Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
